# mesic_ai_workshop

./: .replit  README.md  embeddings.py  gen_attractions.py  pyproject.toml  replit.nix  schema.py
workshop/: app.py
